--- a/Python/SecTesting/playbook_gen/FrontEnd/Templates/firewall.html
+++ b/Python/SecTesting/playbook_gen/FrontEnd/Templates/firewall.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portfolio</title>
+  <title>Firewall Rules</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
   
-  <h2 id="playbookGenerator" style="text-align: center;">Portfolio</h2>
+  <h2 id="playbookGenerator" style="text-align: center;">Firewall Rules</h2>
   <div class="top-bar">
     <a href="/">
         <button>
@@ -27,9 +27,7 @@
     </a>
     
     <a href="/portfolio">
-    <button>
-        Portfolio
-    </button>
+        <button>Portfolio</button>
     </a>
     
   </div>
