--- a/Python/SecTesting/playbook_gen/FrontEnd/Templates/index.html
+++ b/Python/SecTesting/playbook_gen/FrontEnd/Templates/index.html
@@ -9,11 +9,20 @@
   <h2 id="playbookGenerator" style="text-align: center;">Playbook Generator</h2>
   <div class="top-bar">
     <button>Generate Playbook</button>
-    <button>Subnet Calculator</button>
-    <button>Firewall Rules</button>
+    <a href="/subnetcalc">
+      <button>
+          Subnet Calculator
+      </button>
+    </a>
+    
+    <a href="/firewallrules">
+      <button>
+          Firewall Rules
+      </button>
+    </a>
 
     <a href="/portfolio">
-    <button>Portfolio</button>
+      <button>Portfolio</button>
     </a>
     
   </div>
